fix: fixed gap for delete icon in taxonomy listing page

--- a/src/pages/Dashboard/Taxonomy/taxonomy.css
+++ b/src/pages/Dashboard/Taxonomy/taxonomy.css
@@ -112,6 +112,10 @@
   margin-right: 8px;
 }
 
+.taxonomy-listing-wrapper .event-list-item-wrapper {
+  gap: 14px;
+}
+
 @media only screen and (max-width: 428px) {
   .taxonomy-listing-wrapper .events-heading-wrapper .events-heading {
     font-size: 24px;
